Cleanups in Test Common Module